plots for ex a and b